--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -29,7 +29,7 @@ jobs:
         run: docker build . --file Dockerfile --tag $IMAGE_NAME
 
       - name: Log into registry
-        run:  echo "${{ secrets.DOCKER_PASS }}" | docker login -u terminusdb --password-stdin
+        run:  echo '${{ secrets.DOCKER_PASS }}' | docker login -u terminusdb --password-stdin
 
       - name: Push image
         run: |
