--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,13 +2,6 @@ name: Docker
 
 on:
   push:
-    # Publish `master` as Docker `latest` image.
-    branches:
-      - master
-
-    # Publish `v1.2.3` tags as releases.
-    tags:
-      - v*
 
 env:
   # TODO: Change variable to your image's name.
@@ -23,15 +16,36 @@ jobs:
     if: github.event_name == 'push'
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
+
+        # Add support for more platforms with QEMU (optional)
+        # https://github.com/docker/setup-qemu-action
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        with:
+          platforms: linux/amd64,linux/arm64
 
       - name: Build image
-        run: docker build . --file Dockerfile --tag $IMAGE_NAME
+        run: docker buildx build . --file Dockerfile --tag $IMAGE_NAME
 
       - name: Log into registry
+        if: >
+          github.event_name == 'push' && (
+            github.ref == 'refs/heads/master' ||
+            startsWith(github.ref, 'refs/tags/v')
+          )
         run:  echo '${{ secrets.DOCKER_PASS }}' | docker login -u terminusdb --password-stdin
 
       - name: Push image
+        if: >
+          github.event_name == 'push' && (
+            github.ref == 'refs/heads/master' ||
+            startsWith(github.ref, 'refs/tags/v')
+          )
         run: |
           IMAGE_ID=$IMAGE_NAME
 
