--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -4,7 +4,6 @@ on:
   push:
 
 env:
-  # TODO: Change variable to your image's name.
   IMAGE_NAME: terminusdb/swipl
 
 jobs:
@@ -29,9 +28,6 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
 
-      - name: Build image
-        run: docker buildx build . --file Dockerfile --tag $IMAGE_NAME --platform linux/amd64,linux/arm64
-
       - name: Log into registry
         if: >
           github.event_name == 'push' && (
@@ -40,7 +36,7 @@ jobs:
           )
         run:  echo '${{ secrets.DOCKER_PASS }}' | docker login -u terminusdb --password-stdin
 
-      - name: Push image
+      - name: Set image name
         if: >
           github.event_name == 'push' && (
             github.ref == 'refs/heads/master' ||
@@ -58,8 +54,12 @@ jobs:
           # Use Docker `latest` tag convention
           [ "$VERSION" == "master" ] && VERSION=latest
 
-          echo IMAGE_ID=$IMAGE_ID
-          echo VERSION=$VERSION
+          echo "image_tag=${IMAGE_ID}:${VERSION}" >> $GITHUB_ENV
 
-          docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
-          docker push $IMAGE_ID:$VERSION
+      - name: Build and push image image
+        run: |
+          if [ -z ${{ env.image_tag }} ]; then
+              docker buildx build . --file Dockerfile --tag ${{ env.image_tag }} --platform linux/amd64,linux/arm64 --push
+          else
+              docker buildx build . --file Dockerfile --tag $IMAGE_NAME --platform linux/amd64,linux/arm64
+          fi
